# fib-o1

./: .gitignore  Cargo.toml  README.md  build.rs
src/: error.rs  fib.rs  lib.rs
tests/: public_api_test.rs
