[package]
name = "fib-o1"
version = "0.1.0"
edition = "2024"

[dependencies]
num = { version = "0.4.3", optional = true }
num-bigint = { version = "0.4.6", optional = true }

[build-dependencies]
num = {version = "0.4.3", features = ["num-bigint"]}
paste = "1.0.15"

[features]
bigint = ["dep:num-bigint"]
codegen-inplace = []
all = ["bigint"]
