[package]
name = "fib-o1"
version = "0.1.2"
edition = "2024"
description = "generate Fibonacci sequence numbers in O(1) time"
authors = ["Ryan Geary <rtgnj42@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/theryangeary/fib-o1"
documentation = "https://docs.rs/fib-01"
repository = "https://github.com/theryangeary/fib-o1"
readme = "README.md"

[dependencies]
num = { version = "0.4.3", optional = true }
num-bigint = { version = "0.4.6", optional = true }

[build-dependencies]
num = {version = "0.4.3", features = ["num-bigint"]}
paste = "1.0.15"

[features]
default = ["pow12", "bigint"]
bigint = ["dep:num-bigint"]
codegen-inplace = []
all = ["bigint"]
pow10 = []
pow11 = []
pow12 = []
pow13 = []
pow14 = []
pow15 = []
